--- a/carrinho.css
+++ b/carrinho.css
@@ -71,15 +71,15 @@ h1#titulologo{
     height: 31%;
 }
 div#contato{
-    width: 54%;
+    width: 60%;
     display: inline-flex;
-    margin-right: 1%;
+    margin-left: 0%;
 }
 
 img#whats{
-  width: 19%;
+      width: 13%;
     margin-right: -5%;
-    margin-left: -5%;
+    margin-left: -3%;
     height: 5em;
     position: relative;
     bottom: 0%;
@@ -87,11 +87,12 @@ img#whats{
 
 
 h2#whatsapp{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
     position: relative;
     top: 16%;
     font-size: 13pt;
+
     width: 50%;
     height: fit-content;
 
@@ -102,6 +103,7 @@ h2#number{
     position: relative;
     top: 16%;
     font-size: 13pt;
+      margin-left:3%;
     width: 32%;
     height: fit-content;
 
@@ -307,3 +309,123 @@ img#leaf2{
         z-index: 1;
         
     }}
+
+    div#itens{
+    width: 30%;
+    margin-top: -37%;
+    margin-left: 35%;
+    position: relative;
+    color: #5E5341;
+    height: fit-content;
+    font-family: 'Source Sans Pro', sans-serif;
+
+    }
+    div#totalspan{
+             width:30%;
+            margin-left: 35%;
+        position:relative;
+    color:#5E5341;
+    height:fit-content;
+   font-family: 'Source Sans Pro', sans-serif;
+
+
+    }
+
+    button#whatsapp{
+           background-color:#334003;
+           width:10%;
+           height:3em;
+           border-radius: 10px;
+           margin-top:3%;
+           margin-left: 35%;
+       
+    }
+
+    a#whatsapp-button{
+         color:#C6D58C;
+     
+        text-decoration: none;
+        
+    }
+    button#clean{
+           background-color:#334003;
+           width:10%;
+           height:3em;
+           border-radius: 10px;
+           margin-top:3%;
+     
+             color:#C6D58C;
+     
+        text-decoration: none;
+       
+
+    }
+
+    div#form{
+        width: 20%;
+        height: 30em;
+        border: 1px solid black;
+        background-color: #334003;
+    }
+    .labels{
+     color:#C6D58C;
+        font-family: 'Source Sans Pro', sans-serif;
+         margin-left: 5%;
+         font-weight: bolder;
+ 
+     
+    }
+
+    .inputs{
+        background-color: #C6D58C;
+        border: none;
+        width:90%;
+        margin-left: 5%;
+        height:1.5em;
+        font-family: 'Source Sans Pro', sans-serif;
+        color:black;
+    
+    }
+
+    button#buttonform{
+            background-color:#88aa0cdc;
+           width:50%;
+           height:2em;
+           border-radius: 10px;
+           margin-top:3%;
+     
+             color:#C6D58C;
+     
+        text-decoration: none;
+        margin-left: 5%;
+    }
+
+    h1#titulo1{
+                 color:#C6D58C;
+                    font-family: 'Source Sans Pro', sans-serif;
+                    font-size: 11pt;
+                    justify-content: center;
+                    width: 100%;
+                    margin-left: 5%;
+
+    }
+
+    button#bucarrinho{
+    width: 17%;
+    margin-top: 1%;
+    height: 3em;
+    border: none;
+
+    }
+
+    a#acarrinho{
+        text-decoration: none;
+        color:green;
+    }
+
+    img#carrinhoverde{
+        width: 4%;
+    height: 4em;
+    margin-bottom: 0%;
+    }
+    
