--- a/cebolinha.css
+++ b/cebolinha.css
@@ -329,105 +329,69 @@ img#leaf2{
     margin-bottom: 0%;
     }
 
-    div#itens{
-    width: 30%;
-    margin-top: -37%;
-    margin-left: 35%;
-    position: relative;
-    color: #5E5341;
-    height: fit-content;
-    font-family: 'Source Sans Pro', sans-serif;
-
-    }
-    div#totalspan{
-             width:30%;
-            margin-left: 35%;
-        position:relative;
-    color:#5E5341;
-    height:fit-content;
-   font-family: 'Source Sans Pro', sans-serif;
-
-
+    div#imgcebolinha{
+    width: 45%;
+    height: 35em;
     }
 
-    button#whatsapp{
-           background-color:#334003;
-           width:10%;
-           height:3em;
-           border-radius: 10px;
-           margin-top:3%;
-           margin-left: 35%;
-       
-    }
-
-    a#whatsapp-button{
-         color:#C6D58C;
-     
-        text-decoration: none;
+    div#imgcebolinha img{
+        width:90%;
+        height:33em;
+        margin-top: 1%;
+        margin-left:5%;
+        padding:1%;
         
     }
-    button#clean{
-           background-color:#334003;
-           width:10%;
-           height:3em;
-           border-radius: 10px;
-           margin-top:3%;
-     
-             color:#C6D58C;
-     
-        text-decoration: none;
-       
-
-    }
-
-    div#form{
-        width: 20%;
-        height: 30em;
-        border: 1px solid black;
-        background-color: #334003;
-    }
-    .labels{
-     color:#C6D58C;
-        font-family: 'Source Sans Pro', sans-serif;
-         margin-left: 5%;
-         font-weight: bolder;
- 
-     
-    }
-
-    .inputs{
-        background-color: #C6D58C;
-        border: none;
-        width:90%;
-        margin-left: 5%;
-        height:1.5em;
-        font-family: 'Source Sans Pro', sans-serif;
-        color:black;
     
+    div#imgcebolinha img:hover{
+        box-shadow: 0 0 10px 2px rgb(124 124 124 / 20%);
+        
+    }
+    div#informacoes{
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 50%;
+    margin-left: 46%;
+    margin-top: -42%;
+    color: #455F44;
+    }
+    section{
+        display: inline;
     }
 
-    button#buttonform{
-            background-color:#88aa0cdc;
-           width:50%;
-           height:2em;
-           border-radius: 10px;
-           margin-top:3%;
-     
-             color:#C6D58C;
-     
-        text-decoration: none;
-        margin-left: 5%;
+    div#informacoes img{
+        width:10%;
     }
-
-    h1#titulo1{
-                 color:#C6D58C;
-                    font-family: 'Source Sans Pro', sans-serif;
-                    font-size: 11pt;
-                    justify-content: center;
-                    width: 100%;
-                    margin-left: 5%;
-
+    div#informacoes button{
+    position: relative;
+    bottom: 2em;
     }
-
 
     
+    
+.botoes{
+    border:none;
+    background-color:#455f44;
+    color: white;
+    border-radius:10px;
+    height:2em;
+    margin-top:5%;
+    margin-left:0%;
+}
+
+.botoes:hover{
+    border: 1px solid black;
+    background-color: white;
+   color: #455F44;
+}
+hr#um{
+    width:29%;
+    margin-right: 71%;
+    margin-top:-3.3%;
+
+}
+hr#dois{
+    width:29%;
+    margin-right: 71%;
+    margin-top:-1%;
+
+}
