--- a/cebolinha.css
+++ b/cebolinha.css
@@ -1,11 +1,11 @@
-body
-{
-    background-color:#F2F2F2;
+body {
+background-color: #F2F2F2;
     background-size: cover;
-    background-size: 900px;
+    width: 84.3em;
+    height: 47em;
     min-height: 100vh;
-    color:#111f2a;
-  
+    color: #111f2a;
+    margin-left: -0.6%;
 }
 @media (max-width:767.98px){
     body{
@@ -14,7 +14,6 @@ body
 
     }
 }
-
 header{
     height:8em;
     
@@ -29,12 +28,97 @@ header{
     }
 
 }
-div#identification{
-    display: inline-flex;
-    height:60%;
+div#flutuante{
+    display: none;
 }
 
-.menubar{
+
+@media (max-width:767.98px){
+    div#flutuante{
+    display: block;
+    width: 23%;
+    left: 75%;
+    bottom: 84.7%;
+    position: fixed;
+    z-index: 2;
+    }}
+img#botaoflu{
+    width: 80%;
+}
+
+    
+div#menuflutuante{
+        display: none;
+}
+
+ul#menuflu{
+    position: relative;
+}
+
+@media (max-width:767.98px){
+    ul#menuflu{
+    position: fixed;
+    top: 11%;
+    left: 45%;
+    width: 35%;
+    background-color: #F29F05;
+    font-size: 12pt;
+    height: 12em;
+    list-style: none;
+    font-size: 12pt;
+    list-style: none;
+    margin-left: 0%;
+    z-index: 2;
+    border-radius: 8px;
+
+    }}
+
+ul#menuflu li{
+    display: block;
+}
+
+ 
+@media (max-width:767.98px){
+    ul#menuflu li{   
+    margin-left: 16%;
+    margin-top: 1.9%;}}
+    
+    
+
+div#flutuante:hover div#menuflutuante{
+    display: block;
+}
+
+
+div#sky{
+    display: inline-flex;
+    width: 100%;
+    height: 2em;
+    margin-top: -0.9%;
+    background-color: #F29F05;
+    margin-left: 0.6%;
+
+}
+@media (max-width:767.98px){
+    div#sky{
+      margin-left: -2%;
+    width: 103.7%;
+    height: 4.5em;
+    }}
+
+div#sky h1{
+     position: relative;
+    top: -9%;
+
+}
+@media (max-width:767.98px){
+    div#sky h1{
+        margin-left: 2%;
+    top: -8%;
+    font-size: 10pt;
+
+    }}
+    .menubar{
     display: flex;
     justify-content: center;
     position: relative;
@@ -42,14 +126,61 @@ div#identification{
     background-color: #334003;
     border-radius: 2px;
     bottom: 30%;
-      border-radius: 5px;
+      border-radius: 5px;}
+
+.h{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+       width: 40%;
+    height: 1.5em;
+    text-align: center;
+    border: none;
+    font-size: 11pt;
+    color: #3E5903;
+
+}
+.h a{
+  color: #3E5903;
+}
+
+@media (max-width:767.98px){
+    .h a{
+        font-size: 10pt;
+    }}
+.h a:hover{
+    color:#729945;
+    transition: 0.2s;
+}
+    
+
+div#identification{
+    display: inline-flex;
+    height:60%;
+}
+@media (max-width:767.98px){
+    div#identification{
+    width:100%;
+    display: contents;
+    height: 5em;
+
+    }}
+
+.menubar{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    background-color: #F29F05;
+
+    bottom: 30%;
+        margin-left: 0.6%;
 
 }
 @media (max-width:767.98px){
-    .menubar{display: flex;
+    .menubar{display: none;
         justify-content: center;
         width: 100%;
-        height:8em;
+        height:3em;
       
 
     }}
@@ -59,8 +190,13 @@ img#logo{
     height: 140%;
     position: relative;
     bottom:25%;
+    margin-left: 1%;
     
 }
+@media (max-width:767.98px){
+    img#logo{
+        width:25%;
+    }}
 
 h1#titulologo{
        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -70,11 +206,23 @@ h1#titulologo{
     width: 70%;
     height: 31%;
 }
+@media (max-width:767.98px){
+    h1#titulologo{
+      margin-top: -17%;
+    font-size: 16pt;
+    width: 12em;
+    margin-left: 26%;
+}
+    }
 div#contato{
     width: 60%;
     display: inline-flex;
     margin-left: 0%;
 }
+@media (max-width:767.98px){
+    div#contato{
+        width: 100%;
+    }}
 
 img#whats{
       width: 13%;
@@ -84,6 +232,10 @@ img#whats{
     position: relative;
     bottom: 0%;
 }
+@media (max-width:767.98px){
+    img#whats{
+        display: none;
+    }}
 
 
 h2#whatsapp{
@@ -97,6 +249,11 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: fit-content;
 
 }
+@media (max-width:767.98px){
+    h2#whatsapp{
+     font-size: 12pt;
+    width: 61%;
+    }}
 h2#number{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
@@ -108,6 +265,13 @@ h2#number{
     height: fit-content;
 
 }
+@media (max-width:767.98px){
+    h2#number{
+      width: 7em;
+    font-size: 12pt;
+}
+}
+
 nav#menu1{
     list-style: none;
     position: relative;
@@ -138,47 +302,6 @@ nav#menu1 li{
             display: inline-block;
         
     }}
-li#but1{
-    position: relative;
-    
-
-}
-@media (max-width:767.98px){
-    li#but1{
-        right:80px;
-        top:25px;
-        padding:0px;
-        width: 50px;
-    
-
-    }}
-
-li#but2{
-    position: relative;
- 
-}
-@media (max-width:767.98px){
-    li#but2{
-    right:70px; 
-    top:25px;
-    padding:0px;
-     width: fit-content;
-       
-
-}}
-li#but3{
-    position: relative;
-    
-}
-
- @media (max-width:767.98px){
-li#but3{
-       right: 140px;
-        top:5px;
-        margin-bottom:5%;
-        
-}}
-
 
 
 li#but5{
@@ -202,43 +325,8 @@ nav#menu1 li:hover{
       transition: 2.5s;
 }
 
-.menu li ul{
-    position: absolute;
-    display: none;
-    width: 160%;
-    text-align: right;
-    background-color: #E1DCC6;
-    font-style: none;
-    border: 1px solid #C6D58C;
-    border-radius: 8px;
-    z-index: 2;
-      
-}
-@media (max-width:767.98px){
-    .menu li ul{
-        position: absolute;
-        top: 100%;
-        width:fit-content;
-        height:fit-content;
-        padding: 0px;
-        z-index: 2;
-        border-radius: 8px;
-       
 
-        
-    }}
 
-.menu li:hover ul, .menu li.over ul{
-    display: block;
-  
-
-   
-}
-
-.menu li ul li{
-    display: block;
-    transition: 2s;
-}
 
 .opt1{
     position:relative;
@@ -253,13 +341,14 @@ nav#menu1 li:hover{
 
 .opt{
    font-family: 'Source Sans Pro', sans-serif;
-    color:#C6D58C;
+    color:#3E5903;
     font-weight: bolder;
 
 }
+
 .menu a{
     text-decoration: none;
-    color:#C6D58C;
+    color:#3E5903;
 }
 
 
@@ -310,25 +399,40 @@ img#leaf2{
         
     }}
 
-        button#bucarrinho{
-    width: 17%;
+    button#bucarrinho{
+            display: inline-flex;
+    width: 15%;
     margin-top: 1%;
     height: 3em;
+    background-color: #3E5903;
+    border-radius: 5px;
     border: none;
-
     }
 
+    @media (max-width:767.98px){
+        button#bucarrinho{
+    width: 10em;
+
+        }}
+       button#bucarrinho:hover{
+           background-color:#F27405;
+         
+       }
+
     a#acarrinho{
-        text-decoration: none;
-        color:green;
+      text-decoration: none;
+    color: #C6D58C;
+    margin-top: 10%;
+    margin-right: 13%;
     }
 
     img#carrinhoverde{
-        width: 4%;
-    height: 4em;
+ width: 39%;
+    height: 3em;
     margin-bottom: 0%;
+    margin-right: 17%;
     }
-
+    
     div#imgcebolinha{
     width: 45%;
     height: 35em;
